syntax = "proto3";

package bytebase.v1;

option go_package = "generated-go/v1";

enum DeploymentType {
  DEPLOYMENT_TYPE_UNSPECIFIED = 0;
  DATABASE_CREATE = 1;
  DATABASE_DDL = 2;
  DATABASE_DDL_GHOST = 3;
  DATABASE_DML = 4;
  DATABASE_RESTORE_PITR = 5;
}
